tests/baselines/reference/parserComputedPropertyName32.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName32.ts(2,5): error TS1165: Computed property names are not allowed in an ambient context.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName32.ts (1 errors) ====
    declare class C {
        [e](): number 
        ~~~
!!! error TS1165: Computed property names are not allowed in an ambient context.
    }